[package]
name = "skyhook"
version = "2.0.0-dev"
edition = "2021"

license = "MIT"
description = "A simple input library for games."

[dependencies]
chrono = "0.4.26"
hertz = { git = "https://github.com/pikokr/hertz-rs" }
once_cell = "1.18.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xrecord"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
windows-targets = "0.48.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.1"
core-foundation = "0.9.3"
