[package]
name = "skyhook"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Global keyboard hooking"
readme = "../README.md"
repository = "https://gitlab.paring.moe/SkyHook/SkyHook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cancellation = "0.1.0"
chrono = "0.4.31"
libc = "0.2.150"

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.11", features = ["user", "kernel"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xrecord"] }

[build-dependencies]
bindgen = "0.69.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23.1"
core-foundation = "0.9.3"
io-kit-sys = "0.4.0"
cacao = "0.3.2"
